--- a/style.css
+++ b/style.css
@@ -111,6 +111,10 @@ input[type=checkbox]{
    
 }
 
+.right-box a:hover{
+    background: #113;
+}
+
 .right-box a i{
     font-size: 17px;
     margin-right: 10px;
